--- a/src/components/ui/banner/style.module.scss
+++ b/src/components/ui/banner/style.module.scss
@@ -3,7 +3,7 @@
 .banner {
   max-width: 100%;
   height: 43.875rem;
-  background: url('@Assets/img/banner-bg.jpg');
+  background: url('@Assets/img/banner-bg_sm.jpg');
   background-repeat: no-repeat;
   background-position: left top;
   background-size: cover;
