--- a/src/pages/signup/style.module.scss
+++ b/src/pages/signup/style.module.scss
@@ -58,3 +58,21 @@
   line-height: 1.125rem;
   color: var(--color-grey-dark);
 }
+
+.accordion_hidden {
+  display: none;
+}
+
+.hidden-billing-block {
+  background-color: var(--color-grey);
+  width: 90%;
+  height: 90%;
+  font-size: 1rem;
+  padding: 1rem;
+  text-align: center;
+  vertical-align: middle;
+
+  &_hidden {
+    display: none;
+  }
+}
