--- a/src/pages/signup/style.module.scss
+++ b/src/pages/signup/style.module.scss
@@ -74,11 +74,11 @@
   vertical-align: middle;
   display: flex;
   flex-direction: column;
-    align-items: flex-start;
-    gap: 1rem;
+  align-items: flex-start;
+  gap: 1rem;
 
-  &::after{
-    content: 'The billing address the same as delivery address'
+  &::after {
+    content: 'The billing address the same as delivery address';
   }
 
   &_hidden {
