fix: add hidden

--- a/src/pages/signup/style.module.scss
+++ b/src/pages/signup/style.module.scss
@@ -81,7 +81,12 @@
     content: 'The billing address the same as delivery address';
   }
 
+  &[hidden] {
+    display: none;
+  }
+
   &_hidden {
     display: none;
   }
+
 }
