--- a/src/pages/signup/style.module.scss
+++ b/src/pages/signup/style.module.scss
@@ -64,15 +64,29 @@
 }
 
 .hidden-billing-block {
-  background-color: var(--color-grey);
+  background-color: var(--color-white);
   width: 90%;
   height: 90%;
-  font-size: 1rem;
+  font-size: 1.125rem;
+  color: var(--color-black);
   padding: 1rem;
   text-align: center;
   vertical-align: middle;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 1rem;
+
+  &::after {
+    content: 'The billing address the same as delivery address';
+  }
+
+  &[hidden] {
+    display: none;
+  }
 
   &_hidden {
     display: none;
   }
+
 }
