feat: add product data on the page with api and added style

--- a/src/components/ui/container/style.module.scss
+++ b/src/components/ui/container/style.module.scss
@@ -7,7 +7,7 @@
   justify-content: space-between;
 
   box-sizing: border-box;
-  border: 1px solid red; //debuging rule
+  // border: 1px solid red; //debuging rule
 }
 
 @media screen and (min-width: 1024px) {
