--- a/src/styles/style.module.scss
+++ b/src/styles/style.module.scss
@@ -1,6 +1,8 @@
 // main global style for project's index.ts
 //*****************************************
 
+@import '@Src/styles/variables.scss';
+
 // styles for components write in components style.module.scss
 
 @import '~normalize.css/normalize.css';
