--- a/src/components/common/content-page/style.module.scss
+++ b/src/components/common/content-page/style.module.scss
@@ -1,4 +1,7 @@
+@import '@Src/styles/variables.scss';
+
 .content-page {
+  background: var(--color-grey-extra-light);
   display: flex;
   flex-direction: column;
   align-items: stretch;
@@ -6,7 +9,6 @@
 }
 
 .header {
-  background-color: red;
   padding: 2rem;
 }
 
@@ -17,6 +19,5 @@
 }
 
 .footer {
-  background-color: greenyellow;
   padding: 2rem;
 }
