--- a/src/pages/product/style.module.scss
+++ b/src/pages/product/style.module.scss
@@ -1,2 +1,99 @@
-.catalogue {
+@import '@Src/styles/variables.scss';
+
+.product {
+  display: flex;
+  flex-direction: column;
+}
+.product-info {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  padding: 1.5rem;
+  background: var(--color-white);
+  border-radius: 1.5rem;
+}
+.product-name {
+  font-size: 2rem;
+  line-height: 2.5rem;
+  font-weight: 400;
+}
+.product-name-sale {
+  &::after {
+    content: 'SALE';
+    font-size: 1.5rem;
+    line-height: 2.5rem;
+    font-weight: 600;
+    margin-left: 2rem;
+    padding: 0 1rem;
+    color: var(--color-white);
+    background-color: var(--color-blue);
+  }
+}
+.product-price-row {
+  display: flex;
+  justify-content: space-between;
+}
+.product-price-wrapper {
+  display: flex;
+  font-size: 1.5rem;
+  line-height: 2rem;
+  gap: 0.75rem;
+}
+.price-title {
+  color: var(--color-grey-dark);
+}
+.price {
+  color: var(--color-orange-main);
+  font-weight: 600;
+}
+.price-old {
+  color: var(--color-orange-light);
+  font-weight: 400;
+}
+.button {
+}
+.attribute-list {
+  padding-left: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.attribute-row {
+  display: flex;
+  align-items: center;
+  font-size: 1rem;
+  line-height: 1.5rem;
+  gap: 0.5rem;
+
+  &::before {
+    content: '';
+    display: block;
+    width: 0.5rem;
+    height: 0.5rem;
+    border-radius: 1px;
+    top: 0.344rem;
+    left: 0;
+    background-color: var(--color-orange-light);
+    transform: rotate(45deg);
+  }
+}
+
+.attribute-title {
+  color: var(--color-grey-dark);
+}
+.attribute {
+}
+.desc {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+.desc-title {
+  font-size: 1.125rem;
+  line-height: 1.5rem;
+  color: var(--color-grey-dark);
+}
+.desc-text {
+  font-size: 1rem;
+  line-height: 1.5rem;
 }
