--- a/src/components/ui/input-text/style.module.scss
+++ b/src/components/ui/input-text/style.module.scss
@@ -56,6 +56,7 @@
 
   &:disabled {
     border: none;
+    background-color: rgba(242, 242, 242, 0.4);
     &::placeholder {
       color: #fafafa;
     }
