--- a/src/components/logic/category-list/style.module.scss
+++ b/src/components/logic/category-list/style.module.scss
@@ -1,2 +1,16 @@
+.category-container {
+  border: 1px solid yellow;
+}
+
 .category-list {
+  display: flex;
+  list-style: none;
+  flex-direction: row;
+  justify-content: center;
+  gap: 2rem;
+  flex-wrap: wrap;
+}
+
+.category-item {
+  padding: 0;
 }
