feat: implement product card

--- a/src/components/logic/product-card/style.module.scss
+++ b/src/components/logic/product-card/style.module.scss
@@ -1,11 +1,72 @@
 .product-card {
-  border: 2px solid red;
+  box-sizing: border-box;
+  border: 0.1px solid rgb(29, 6, 6);
+  padding: 1rem 0 2rem;
+}
+
+.product-card-container {
+  width: 336px;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+  align-items: center;
 }
 
 .product-image {
   border: 1px solid green;
+  width: 320px;
+  height: 240px;
+  object-fit: cover;
 }
 
 .product-link {
-  font-size: 2rem;
+}
+
+.product-name {
+  margin: 0;
+  padding: 0;
+  font-family: var(--font-family);
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 120%;
+  text-align: center;
+  color: var(--color-black);
+}
+
+.product-description {
+  font-family: var(--second-family);
+  font-weight: 400;
+  font-size: 14px;
+  color: var(--color-grey-dark);
+  width: 264px;
+  margin: 0;
+  -webkit-line-clamp: 2;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+
+.description-box {
+  height: 30px;
+}
+
+.product-price {
+  font-family: var(--font-family);
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 133%;
+  text-align: center;
+  color: var(--color-orange-main);
+  margin: 0;
+  &_old {
+    padding-right: 1rem;
+    font-family: var(--font-family);
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 133%;
+    text-decoration: line-through;
+    text-align: center;
+    color: var(--color-orange-extra-light);
+  }
 }
