feat: add changing the availability of arrows

--- a/src/components/ui/slider/style.module.scss
+++ b/src/components/ui/slider/style.module.scss
@@ -8,7 +8,7 @@
   .wrapper {
     padding-bottom: 0.25rem;
   }
-  .indicator{
+  .indicator {
     background-color: var(--color-black);
   }
   .controls-panel {
@@ -17,18 +17,19 @@
     bottom: 1rem;
     padding: 0 1rem;
   }
-  .arrow {
+  .arrow{
     width: 2.75rem;
     height: 2.75rem;
     cursor: pointer;
     display: flex;
     align-items: center;
+
     svg {
       height: 1.5rem;
       width: auto;
       path {
         fill: var(--color-black);
-        transition: fill var(--transition-time);
+        transition: all var(--transition-time);
       }
       @media (hover: hover) and (pointer: fine) {
         &:hover {
@@ -40,6 +41,15 @@
     }
   }
 }
+
+.arrow-disabled{
+  pointer-events: none;
+  cursor:auto;
+  svg {
+    opacity: 0;
+  }
+}
+
 .controlsOutside {
   .wrapper {
     padding-bottom: 4.5rem;
@@ -51,7 +61,7 @@
     padding: 0 1rem;
   }
 
-  .indicator{
+  .indicator {
     background-color: var(--color-grey-light);
   }
   .arrow {
@@ -68,12 +78,12 @@
         transition: fill var(--transition-time);
       }
       @media (hover: hover) and (pointer: fine) {
-      &:hover {
-        path {
-          fill: var(--color-orange-light);
+        &:hover {
+          path {
+            fill: var(--color-orange-light);
+          }
         }
       }
-    }
     }
   }
 }
@@ -89,27 +99,26 @@
     width: 100%;
     height: auto;
 
-    &.active, &.next{
+    &.active,
+    &.next {
       display: block;
     }
-      .image {
-        display: block;
-        height: auto;
-        width: calc(100% - 4px);
-        object-fit: cover;
-        box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
-        border-radius: 2rem;
-      }
+    .image {
+      display: block;
+      height: auto;
+      width: calc(100% - 4px);
+      object-fit: cover;
+      box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+      border-radius: 2rem;
     }
+  }
 }
-
 
 .controls-panel {
   display: flex;
   justify-content: space-between;
-    align-items: center;
+  align-items: center;
 }
-
 
 .indicators {
   display: flex;
