--- a/src/pages/product/style.module.scss
+++ b/src/pages/product/style.module.scss
@@ -4,7 +4,7 @@
   margin: 2rem 0;
   display: flex;
   flex-direction: row;
-  gap:3rem
+  gap: 3rem;
 }
 .product-info {
   display: flex;
@@ -18,6 +18,7 @@
   font-size: 2rem;
   line-height: 2.5rem;
   font-weight: 400;
+  margin: 0;
 }
 .product-name-sale {
   &::after {
@@ -51,11 +52,12 @@
 .price-old {
   color: var(--color-orange-light);
   font-weight: 400;
-  text-decoration:line-through;
+  text-decoration: line-through;
 }
 .button {
 }
 .attribute-list {
+  margin: 0;
   padding-left: 0;
   display: flex;
   flex-direction: column;
@@ -100,6 +102,6 @@
   font-size: 1rem;
   line-height: 1.5rem;
 }
-.slider{
+.slider {
   min-width: 576px;
 }
