--- a/src/pages/product/style.module.scss
+++ b/src/pages/product/style.module.scss
@@ -5,6 +5,12 @@
   display: flex;
   flex-direction: row;
   gap: 3rem;
+
+  @media (max-width:1080px) {
+    flex-direction: column;
+    align-items: center;
+    gap: 1.5rem;
+  }
 }
 .product-info {
   display: flex;
@@ -19,6 +25,10 @@
   line-height: 2.5rem;
   font-weight: 400;
   margin: 0;
+  display: flex;
+  align-items: flex-start;
+  gap: 2rem;
+
 }
 .product-name-sale {
   &::after {
@@ -26,15 +36,24 @@
     font-size: 1.5rem;
     line-height: 2.5rem;
     font-weight: 600;
-    margin-left: 2rem;
     padding: 0 1rem;
     color: var(--color-white);
     background-color: var(--color-blue);
+    @media (max-width:480px) {
+
+    font-size: 1rem;
+    line-height: 2rem;
+    padding: 0 0.75rem;
+    }
   }
 }
 .product-price-row {
   display: flex;
   justify-content: space-between;
+  @media (max-width:1080px) {
+    flex-direction: column;
+    gap:1.5rem;
+  }
 }
 .product-price-wrapper {
   display: flex;
@@ -104,4 +123,8 @@
 }
 .slider {
   min-width: 576px;
+  @media (max-width:1080px) {
+    min-width: 100%;
+  }
+
 }
