fix: fix background on page 404

--- a/src/pages/not-found/style.module.scss
+++ b/src/pages/not-found/style.module.scss
@@ -1,6 +1,8 @@
 .not-found {
-  background: url('/src/assets/img/404.svg') no-repeat center;
+  background: url('/src/assets/img/404.svg') var(--color-white) no-repeat center;
   background-size: contain;
+  border-radius: 24px;
+  margin:2rem 0;
   padding: 4rem 0;
 
   @media (max-width: 768px) {
