Rss ecomm 3 10 product page implement an image slider for product images (#191)
* refactor: refactor the constructor code with reduce method

* refactor: make the constructor code simpler by moving functionality to methods

* refactor: make product page code simpler

* feat: add basic slider structure

* feat: add svg-inline-loader file-loader

* feat: add slider logic

* feat: add changing the availability of arrows

* feat: add responsive design

* fix: fix background on page 404

--- a/src/components/ui/header/style.module.scss
+++ b/src/components/ui/header/style.module.scss
@@ -11,13 +11,13 @@
   max-width: 100%;
 }
 
-.logo-icon {
+.logo-icon svg {
   width: 21.375rem;
   height: 4.937rem;
   max-width: 100%;
 }
 
-.user-icon {
+.user-icon svg {
   width: 2.75rem;
   height: 2.75rem;
   cursor: pointer;
@@ -64,7 +64,7 @@
   cursor: pointer;
 }
 
-.basket-icon {
+.basket-icon svg {
   width: 2.344rem;
   height: 2.344rem;
 }
