--- a/src/components/common/form-page/style.module.scss
+++ b/src/components/common/form-page/style.module.scss
@@ -48,7 +48,7 @@
   margin: auto;
   display: block;
 
-  .logo-img {
+  .logo-img svg {
     max-width: 100%;
     height: auto;
     @media (max-height: 800px) {
