--- a/src/pages/product/style.module.scss
+++ b/src/pages/product/style.module.scss
@@ -1,8 +1,16 @@
 @import '@Src/styles/variables.scss';
 
 .product {
+  margin: 2rem 0;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  gap: 3rem;
+
+  @media (max-width: 1080px) {
+    flex-direction: column;
+    align-items: center;
+    gap: 1.5rem;
+  }
 }
 .product-info {
   display: flex;
@@ -16,6 +24,10 @@
   font-size: 2rem;
   line-height: 2.5rem;
   font-weight: 400;
+  margin: 0;
+  display: flex;
+  align-items: flex-start;
+  gap: 2rem;
 }
 .product-name-sale {
   &::after {
@@ -23,15 +35,23 @@
     font-size: 1.5rem;
     line-height: 2.5rem;
     font-weight: 600;
-    margin-left: 2rem;
     padding: 0 1rem;
     color: var(--color-white);
     background-color: var(--color-blue);
+    @media (max-width: 480px) {
+      font-size: 1rem;
+      line-height: 2rem;
+      padding: 0 0.75rem;
+    }
   }
 }
 .product-price-row {
   display: flex;
   justify-content: space-between;
+  @media (max-width: 1080px) {
+    flex-direction: column;
+    gap: 1.5rem;
+  }
 }
 .product-price-wrapper {
   display: flex;
@@ -49,10 +69,12 @@
 .price-old {
   color: var(--color-orange-light);
   font-weight: 400;
+  text-decoration: line-through;
 }
 .button {
 }
 .attribute-list {
+  margin: 0;
   padding-left: 0;
   display: flex;
   flex-direction: column;
@@ -96,4 +118,10 @@
 .desc-text {
   font-size: 1rem;
   line-height: 1.5rem;
+}
+.slider {
+  min-width: 576px;
+  @media (max-width: 1080px) {
+    min-width: 100%;
+  }
 }
