--- a/src/components/ui/select/style.module.scss
+++ b/src/components/ui/select/style.module.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
+  height: 44px;
 }
 
 .label {
@@ -49,7 +50,7 @@
   border: 0.5px solid var(--color-grey-light);
   border-radius: 8px;
   max-width: calc(100vw - 4rem);
-  height: auto;
+  height: 44px;
   padding: 0.5rem 0.75rem 0.375rem;
   font-weight: 400;
   font-size: 16px;
