--- a/src/pages/catalogue/style.module.scss
+++ b/src/pages/catalogue/style.module.scss
@@ -25,3 +25,14 @@
 
 .products {
 }
+
+.top-fields-block {
+  display: flex;
+  justify-content: space-between;
+  padding: 26px 0;
+}
+
+.filter-field {
+  width: 240px;
+  height: 44px;
+}
