--- a/src/components/logic/product-card/style.module.scss
+++ b/src/components/logic/product-card/style.module.scss
@@ -1,7 +1,14 @@
 .product-card {
   box-sizing: border-box;
-  border: 0.1px solid rgb(29, 6, 6);
+  // border: 0.1px solid rgb(29, 6, 6);
   padding: 1rem 0 2rem;
+  overflow: hidden;
+  position: relative;
+  &:hover {
+    border-radius: 24px;
+    box-shadow: 2px 4px 4px 0 rgba(0, 0, 0, 0.25);
+    background: #fff;
+  }
 }
 
 .product-card-container {
@@ -14,7 +21,6 @@
 }
 
 .product-image {
-  border: 1px solid green;
   width: 320px;
   height: 240px;
   object-fit: cover;
@@ -26,6 +32,11 @@
 .product-name {
   margin: 0;
   padding: 0;
+  width: 220px;
+  min-height: 48px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   font-family: var(--font-family);
   font-weight: 400;
   font-size: 20px;
@@ -69,4 +80,28 @@
     text-align: center;
     color: var(--color-orange-extra-light);
   }
+}
+
+.cartButton {
+  border-radius: 8px;
+  padding: 12px 28px 12px 16px;
+  width: 292px;
+  height: 48px;
+}
+
+.discounted {
+  position: absolute;
+  width: 200px;
+  height: 43px;
+  background: var(--color-blue);
+  transform: rotate(-30deg) translateX(-44px) translateY(-35px);
+  font-family: var(--font-family);
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 133%;
+  text-align: center;
+  color: var(--color-white);
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
