fix: hover smoothy

--- a/src/components/ui/search-input/style.module.scss
+++ b/src/components/ui/search-input/style.module.scss
@@ -27,6 +27,7 @@
   }
   &:hover {
     box-shadow: 0 0 4px 0 rgba(55, 211, 134, 0.25);
+    transition: all var(--transition-time);
   }
 }
 
@@ -35,7 +36,7 @@
   left: 1rem;
   height: 24px;
   width: 24px;
-  background-image: url('/src/assets/icons/search.svg');
+  background-image: url("/src/assets/icons/search.svg");
   background-repeat: no-repeat;
   background-size: contain;
 }
@@ -45,12 +46,13 @@
   right: 30px;
   height: 24px;
   width: 24px;
-  background-image: url('/src/assets/icons/cross.svg');
+  background-image: url("/src/assets/icons/cross.svg");
   background-repeat: no-repeat;
   background-size: contain;
   border: none;
   background-color: var(--color-white);
   &:hover {
     cursor: pointer;
+    transition: all var(--transition-time);
   }
 }
