--- a/src/components/logic/product-card/style.module.scss
+++ b/src/components/logic/product-card/style.module.scss
@@ -8,6 +8,7 @@
     border-radius: 24px;
     box-shadow: 2px 4px 4px 0 rgba(0, 0, 0, 0.25);
     background: #fff;
+    transition: all var(--transition-time);
   }
 }
 
@@ -87,6 +88,9 @@
   padding: 12px 28px 12px 16px;
   width: 292px;
   height: 48px;
+  :hover{
+    transition: all var(--transition-time);
+  }
 }
 
 .discounted {
