--- a/src/pages/profile/style.module.scss
+++ b/src/pages/profile/style.module.scss
@@ -1,2 +1,84 @@
+@import '@Src/styles/variables.scss';
+
 .profile {
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+  border-radius: 1.5rem;
+  padding: 1.5rem 2rem;
+  background: var(--color-white);
+}
+
+.title-wrapper {
+  display: flex;
+  align-items: center;
+  gap: 1.5rem;
+}
+
+.title {
+  font-weight: 400;
+  margin: 0;
+}
+
+.user-data-wrapper {
+  display: flex;
+  gap: 3rem;
+}
+
+h2 {
+  font-size: 1.5rem;
+  font-weight: 400;
+  margin: 0;
+  line-height: 117%;
+  color: var(--color-black);
+
+  &:has(+ button) {
+    margin-bottom: 2rem;
+  }
+
+  &:has(+ div) {
+    margin-bottom: 1.5rem;
+  }
+}
+
+.user-data-details-wrapper,
+.user-password-wrapper {
+  max-width: 360px;
+  width: 100%;
+}
+
+.user-password-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+
+  font-size: 12px;
+  line-height: 150%;
+  letter-spacing: 0.02em;
+  color: var(--color-grey-dark);
+}
+
+.password-rule {
+  margin-bottom: 3rem;
+}
+
+.input-margin {
+  margin-bottom: 1.5rem;
+}
+
+.btn-line-height {
+  line-height: 100%;
+}
+
+.add-address-btn {
+  margin-bottom: 3rem;
+  line-height: 100%;
+}
+
+.birth-date-input {
+  margin-bottom: 1rem;
+}
+
+.address-wrapper {
+  max-width: 360px;
 }
