fix: cards styles

--- a/src/components/ui/search-input/style.module.scss
+++ b/src/components/ui/search-input/style.module.scss
@@ -36,7 +36,7 @@
   left: 1rem;
   height: 24px;
   width: 24px;
-  background-image: url("/src/assets/icons/search.svg");
+  background-image: url('/src/assets/icons/search.svg');
   background-repeat: no-repeat;
   background-size: contain;
 }
@@ -46,7 +46,7 @@
   right: 30px;
   height: 24px;
   width: 24px;
-  background-image: url("/src/assets/icons/cross.svg");
+  background-image: url('/src/assets/icons/cross.svg');
   background-repeat: no-repeat;
   background-size: contain;
   border: none;
