--- a/src/components/logic/product-card/style.module.scss
+++ b/src/components/logic/product-card/style.module.scss
@@ -4,11 +4,16 @@
   padding: 1rem 0 2rem;
   overflow: hidden;
   position: relative;
-  &:hover {
-    border-radius: 24px;
+  background-color: #fff;
+  border-radius: 24px;
+  &:active {
     box-shadow: 2px 4px 4px 0 rgba(0, 0, 0, 0.25);
-    background: #fff;
-    transition: all var(--transition-time);
+  }
+  @media (hover: hover) and (pointer: fine) {
+    &:hover {
+      box-shadow: 2px 4px 4px 0 rgba(0, 0, 0, 0.25);
+      transition: all var(--transition-time);
+    }
   }
 }
 
@@ -88,7 +93,7 @@
   padding: 12px 28px 12px 16px;
   width: 292px;
   height: 48px;
-  :hover{
+  :hover {
     transition: all var(--transition-time);
   }
 }
