--- a/src/components/ui/search-input/style.module.scss
+++ b/src/components/ui/search-input/style.module.scss
@@ -1,7 +1,8 @@
 .search-input {
   border-radius: 56px;
-  width: 340px;
+  width: 480px;
   height: 44px;
+  box-sizing: border-box;
   display: flex;
   justify-content: left;
   align-items: center;
@@ -12,9 +13,9 @@
 .input-field {
   border: none;
   outline-color: rgba(55, 211, 134, 0.25);
-  background: var(--white);
-  border-radius: 56px;
-  padding: 8px 50px;
+  background: var(--color-white);
+  border-radius: 28px;
+  padding: 0 52px;
   width: 100%;
   height: 44px;
   &::placeholder {
@@ -43,14 +44,15 @@
 
 .clear-button {
   position: absolute;
-  right: 30px;
+  right: 14px;
   height: 24px;
   width: 24px;
   background-image: url('/src/assets/icons/cross.svg');
   background-repeat: no-repeat;
-  background-size: contain;
   border: none;
-  background-color: var(--color-white);
+  background-size: auto;
+  background-position: center;
+  background-color: var(--color-light);
   &:hover {
     cursor: pointer;
     transition: all var(--transition-time);
