--- a/src/components/logic/bread-crumbs/style.module.scss
+++ b/src/components/logic/bread-crumbs/style.module.scss
@@ -2,7 +2,14 @@
   display: flex;
   gap: 0.5rem;
   margin: 0;
-  padding: 3rem 0.75rem 0.5rem;
+  padding: 3.25rem 0px 0.5rem;
+  font-family: var(--font-family);
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 143%;
+  @media screen and (max-width: 1440px) {
+    padding: 3.25rem 0.5rem 0.5rem;
+  }
 }
 
 .link {
@@ -11,7 +18,7 @@
   color: var(--color-grey-dark);
   &::after {
     content: '/';
-    padding-left: 0.5rem;
+    padding-left: 0.25rem;
   }
 }
 
