--- a/src/components/logic/category-list/style.module.scss
+++ b/src/components/logic/category-list/style.module.scss
@@ -1,8 +1,8 @@
 .category-container {
-  border: 1px solid yellow;
 }
 
 .category-list {
+  padding: 0;
   display: flex;
   list-style: none;
   flex-direction: row;
