--- a/src/pages/catalogue/style.module.scss
+++ b/src/pages/catalogue/style.module.scss
@@ -1,21 +1,60 @@
 .catalogue {
+  margin-bottom: 2rem;
 }
 
 .content-section {
   display: grid;
-  grid-template-columns: 1fr 4fr;
+  // grid-template-columns: 340px 1fr;
+  justify-content: center;
+  gap: 2.25rem;
+  grid-template-columns: 340px minmax(300px, 1fr);
+  @media screen and (max-width: 1448px) {
+    grid-template-columns: 340px minmax(300px, 720px);
+  }
+  @media screen and (max-width: 1089px) {
+    grid-template-columns: 720px;
+  }
+  @media screen and (max-width: 720px) {
+    grid-template-columns: 340px;
+  }
 }
 
 .filters {
-  background-color: gray;
+  background-color: rgb(214, 209, 209);
+  min-height: 4rem;
 }
 
 .categories {
 }
 
 .header {
-  color: blue;
+  color: var(--color-orange-main);
+  font-family: var(--font-family);
+  font-weight: 700;
+  font-size: 48px;
+  line-height: 112%;
+  text-align: center;
 }
 
 .products {
+}
+
+.top-fields-block {
+  display: flex;
+  justify-content: space-between;
+  margin: 56px auto;
+  @media screen and (max-width: 1448px) {
+    width: 1060px;
+  }
+  @media screen and (max-width: 1089px) {
+    width: 720px;
+  }
+  @media screen and (max-width: 720px) {
+    width: 340px;
+  }
+}
+
+.filter-field {
+  width: 240px;
+  height: 44px;
 }
