--- a/src/components/ui/range-slider/style.module.scss
+++ b/src/components/ui/range-slider/style.module.scss
@@ -1,3 +1,117 @@
+
+@import '@Src/styles/variables.scss';
+
+.wrapper-range-slider{
+  max-width: clamp(200px, 50vw, 500px);
+  margin: 25vh auto 0;
+}
+
 .range-slider {
-  display: block;
+  height: 5px;
+  position: relative;
+  width: 100%;
+  display: grid;
+  margin-bottom: 1rem;
+
+  .track-wrapper {
+    position: relative;
+    z-index: 1;
+    height: 0.25rem;
+    margin-bottom: var(--_thumb-size);
+    display: grid;
+    align-items: center;
+    margin: 0 0.25rem;
+
+    .track {
+      position: absolute;
+      z-index: 1;
+      left: 0;
+      right: 0;
+      top: 0;
+      bottom: 0;
+      border-radius: 5px;
+      background-color: var(--color-grey);
+    }
+
+    .range-between {
+      position: absolute;
+      z-index: 2;
+      height: 1rem;
+      left: 0%;
+      right: 0%;
+      top: 0;
+      bottom: 0;
+      border-radius: 5px;
+      transform: translateY(-0.35rem);
+      background: linear-gradient(90deg, #f4c672 0%, #f5a73f 100%);;
+    }
+
+    .thumb {
+      position: absolute;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      z-index: 3;
+      width: 1.5rem;
+      height: 1.5rem;
+      color:var(--color-white);
+      font-size: 1rem;
+      line-height: 125%;
+      text-align: center;
+      background-color: var(--color-orange-light);
+      border-radius: 50%;
+      transition: box-shadow 0.3s ease-in-out;
+      cursor: pointer;
+
+      &.left {
+        left: 0%;
+        transform: translate(calc(2rem / -2), 0px);
+      }
+
+      &.right {
+        right: 0%;
+        transform: translate(calc(1rem / 2), 0px);
+      }
+
+      &.hover {
+        background-color: var(--color-orange-main);
+      }
+
+      &.active {
+        background-color: var(--color-orange-main);
+      }
+    }
+  }
+
+  input[type='range'] {
+    position: absolute;
+    pointer-events: none;
+    -webkit-appearance: none;
+    z-index: 2;
+    height: 1.5rem;
+    width: 100%;
+    opacity: 0;
+    cursor: pointer;
+    bottom: 0;
+  }
+
+  input[type='range']::-webkit-slider-thumb {
+    pointer-events: all;
+    width: 1.5rem;
+    height: 1.5rem;
+    border-radius: 0;
+    border: 0 none;
+    background-color: var(--color-orange-light);
+    -webkit-appearance: none;
+  }
+
+  input[type='range']::-moz-range-thumb {
+    pointer-events: all;
+    width: 1.5rem;
+    height: 1.5rem;
+    border-radius: 0;
+    border: 0 none;
+    background-color: var(--color-orange-light);
+    -webkit-appearance: none;
+  }
 }
