--- a/src/components/ui/range-slider/style.module.scss
+++ b/src/components/ui/range-slider/style.module.scss
@@ -73,7 +73,7 @@
   right: 0%;
   top: 0;
   bottom: 0;
-  border-radius: 1rem;;
+  border-radius: 1rem;
   transform: translateY(-0.35rem);
   background: linear-gradient(90deg, #f4c672 0%, #f5a73f 100%);
 }
