Feat/implement range slider component (#196)
* fix: button icon

* feat: add basic layout of range slider component

* fix: display thumb value

* feat: add scale for range slider

* refactor:format

* fix: fix thumb position

* refactor: format

* fix: change position of scale and inputs thumb

--- a/src/components/ui/button/style.module.scss
+++ b/src/components/ui/button/style.module.scss
@@ -8,6 +8,8 @@
   justify-content: center;
   align-items: center;
   transition: background-color var(--transition-time);
+  display: flex;
+  align-items: center;
   cursor: pointer;
   &:disabled {
     background-color: var(--color-grey-light);
@@ -35,6 +37,9 @@
   .icon {
     height: 1.25rem;
     margin-right: 0.5rem;
+    svg {
+      height: 100%;
+    }
   }
 
   &:has(> .icon) {
@@ -52,6 +57,9 @@
   .icon {
     height: 1.5rem;
     margin-right: 0.625rem;
+    svg {
+      height: 100%;
+    }
   }
 
   &:has(> .icon) {
