--- a/src/components/ui/select/style.module.scss
+++ b/src/components/ui/select/style.module.scss
@@ -1,7 +1,7 @@
 .component {
   display: flex;
   flex-direction: column;
-  gap: 0.5rem;
+  gap: 0.313rem;
 }
 
 .label {
@@ -46,8 +46,9 @@
   width: 100%;
   cursor: inherit;
 
-  border: 0.5px solid var(--color-grey-light);
+  border: 0.5px solid var(--color-grey);
   border-radius: 8px;
+  background-color: #fafafa;
   max-width: calc(100vw - 4rem);
   height: auto;
   padding: 0.5rem 0.75rem 0.375rem;
