--- a/src/components/ui/selectWithKeys/style.module.scss
+++ b/src/components/ui/selectWithKeys/style.module.scss
@@ -2,7 +2,7 @@
   display: flex;
   // flex-direction: column;
   gap: 0.5rem;
-  height: 44px;
+  height: 2.75rem;
   align-items: center;
 }
 
@@ -19,14 +19,14 @@
   position: relative;
   &::after {
     content: '';
-    border-radius: 8px;
+    border-radius: 0.5rem;
     background-image: url('./icon.svg');
-    background-size: 24px 24px;
+    background-size: 1.5rem 1.5rem;
     background-position: center;
     background-repeat: no-repeat;
     position: absolute;
-    width: 44px;
-    height: 44px;
+    width: 2.75rem;
+    height: 2.75rem;
     right: 0;
     top: 0;
     z-index: 1;
@@ -49,9 +49,9 @@
   cursor: inherit;
 
   border: 0.5px solid var(--color-grey-light);
-  border-radius: 8px;
+  border-radius: 0.5rem;
   max-width: calc(100vw - 4rem);
-  height: 44px;
+  height: 2.75rem;
   padding: 0.5rem 2.5rem 0.375rem 0.5rem;
   font-weight: 400;
   font-size: 16px;
@@ -59,8 +59,8 @@
   letter-spacing: 0.01em;
   color: var(--color-black);
   option {
-    height: 44px;
-    max-width: 380px;
+    height: 2.75rem;
+    max-width: 20.375rem;
     padding: 2rem;
   }
 }
