--- a/src/pages/profile/style.module.scss
+++ b/src/pages/profile/style.module.scss
@@ -45,6 +45,8 @@ h2 {
 .user-password-wrapper {
   max-width: 360px;
   width: 100%;
+
+  position: relative;
 }
 
 .user-password-wrapper {
@@ -81,4 +83,50 @@ h2 {
 
 .address-wrapper {
   max-width: 360px;
+}
+
+.hidden {
+  display: none;
+}
+
+.notification-error-block-wrapper,
+.notification-success-block-wrapper {
+  position: absolute;
+  bottom: 3.313rem;
+
+  border-radius: 1.5rem;
+  padding: 1.5rem 1rem;
+  max-width: 360px;
+  box-sizing: border-box;
+  width: 100%;
+  opacity: 0.9;
+  transition: opacity 0.5s;
+}
+
+.notification-error-block-wrapper {
+  background-color: rgba(247, 57, 57);
+}
+
+.notification-success-block-wrapper {
+  background-color: rgba(55, 211, 134);
+}
+
+.notification-success-block-wrapper.hidden,
+.notification-error-block-wrapper.hidden {
+  opacity: 0;
+}
+
+.notification-text-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.75rem;
+  line-height: 156%;
+  font-weight: 500;
+  font-size: 1.125rem;
+  color: var(--color-white);
+}
+
+.notification-text-element {
+  margin: 0;
 }
